--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "babel-loader": "^8.1.0",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^3.4.2",
+    "html-loader": "^1.3.2",
     "html-webpack-plugin": "^4.0.3",
     "jest": "^25.2.7",
     "node-sass": "^4.13.1",
