--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "express": "^4.17.1",
     "mini-css-extract-plugin": "^0.9.0",
     "moment": "^2.29.1",
+    "node-fetch": "^2.6.1",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
+    "supertest": "^6.1.3",
     "terser-webpack-plugin": "^2.3.5",
     "webpack": "^4.42.1",
     "webpack-cli": "^3.3.11",
